<resources>
    <string name="app_name">Sorteador de Numeros</string>
    <string name="background_principal">Background principal</string>
    <string name="imagem_logo">imagem logo</string>
    <string name="sorteador_de_numeros">Sorteador de Números</string>
    <string name="sortear">Sortear</string>
    <string name="sortear_novamente">Sortear novamente</string>
    <string name="como_funciona_o_sorteador_de_numeros">Como funciona o sorteador de números</string>
    <string name="tv_info_content1">O sorteador utiliza um algoritmo de geração aleatória para criar números dentro do intervalo especificado pelo usuário.</string>
    <string name="tvSecondTitle">Posso escolher o intervalo dos números?</string>
    <string name="tv_second_content">Sim, você pode definir os valores mínimo e máximo para o intervalo dos números sorteados.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quero_sortear">Quero sortear</string>
    <string name="descricao_sortear">Defina o intervalo e a quantidade de números, clique em \'Sortear\' e veja os resultados na tela. É rápido e fácil!</string>
    <string name="numeros">Números</string>
    <string name="de">de</string>
    <string name="at">até</string>
    <string name="nao_repetir_numero">Não repetir número</string>
    <string name="resultado_do_sorteio">Resultado do Sorteio</string>
    <string name="primeiro_resultado">1º resultado</string>
</resources>