<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_primary"
    tools:context=".MainActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/background_principal"
                android:src="@drawable/bg_principal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="48dp"
                android:alpha="0.4"
                android:contentDescription="@string/imagem_logo"
                android:src="@drawable/img_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="48dp"
                android:text="@string/sorteador_de_numeros"
                android:textAppearance="@style/TextAppearance.Sora.DisplayMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/fcvContent"
                android:name="androidx.navigation.fragment.NavHostFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="36dp"
                app:defaultNavHost="true"
                app:layout_constraintBottom_toTopOf="@+id/btnDraw"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"
                app:navGraph="@navigation/main_nav_graph" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnDraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="36dp"
                android:background="@drawable/button_background"
                android:drawableEnd="@drawable/ic_ir"
                android:paddingHorizontal="48dp"
                android:text="@string/sortear"
                app:layout_constraintBottom_toBottomOf="@id/ivBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvFirstInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_chat"
                android:drawablePadding="16dp"
                android:drawableTint="@color/content_brand"
                android:text="@string/como_funciona_o_sorteador_de_numeros"
                android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
                android:textColor="@color/content_brand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btnDraw" />

            <TextView
                android:id="@+id/tvFirstInfoContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_info_content1"
                android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFirstInfoTitle" />

            <TextView
                android:id="@+id/tvSecondInfoTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="24dp"
                android:drawableStart="@drawable/ic_chat"
                android:drawablePadding="16dp"
                android:drawableTint="@color/content_brand"
                android:text="@string/tvSecondTitle"
                android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
                android:textColor="@color/content_brand"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvFirstInfoContent" />

            <TextView
                android:id="@+id/tvSecondInfoContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="36dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="36dp"
                android:text="@string/tv_second_content"
                android:textAppearance="@style/TextAppearance.RobotoFlex.ParagraphMedium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSecondInfoTitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>